# SheLeads

./: dev_explanation.md
LoRA/: fine_tune.ipynb  llm_juggad.ipynb
backend/: data_pipeline.py  main.py  pyproject.toml  quantum_optimizer.py  ready_to_optimize.csv  train_model.py
backend/src/api/: llm_policy.py
backend/src/dataset/: pipeline.py
backend/src/models/: trainer.py
backend/src/quantum/: optimizer.py
data/: combine_acc_data.py  combine_emp_data.py  combine_fin_data.py  merge_all_data.py  pyproject.toml  raw_districts.csv
data/acc/: women_joint_acnt(1).xls  women_joint_acnt(10).xls  women_joint_acnt(11).xls  women_joint_acnt(12).xls  women_joint_acnt(13).xls  women_joint_acnt(14).xls  women_joint_acnt(15).xls  women_joint_acnt(16).xls  women_joint_acnt(17).xls  women_joint_acnt(18).xls  women_joint_acnt(19).xls  women_joint_acnt(2).xls  women_joint_acnt(20).xls  women_joint_acnt(21).xls  women_joint_acnt(22).xls  women_joint_acnt(23).xls  women_joint_acnt(24).xls  women_joint_acnt(25).xls  women_joint_acnt(26).xls  women_joint_acnt(27).xls  women_joint_acnt(28).xls  women_joint_acnt(29).xls  women_joint_acnt(3).xls  women_joint_acnt(30).xls  women_joint_acnt(31).xls  women_joint_acnt(32).xls  women_joint_acnt(33).xls  women_joint_acnt(4).xls  women_joint_acnt(5).xls  women_joint_acnt(6).xls  women_joint_acnt(7).xls  (+3 more)
docs/: 01-dataset-collection.md  02-data-cleaning.md  03-feature-engineering.md  04-ml-model.md  05-quantum-optimizer.md  06-api-architecture.md  07-frontend.md  README.md
frontend/: README.md  package-lock.json  package.json
(+86 files in other folders)
