[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "scikit-learn>=1.6.1",
    "joblib>=1.4.2",
    "qiskit>=1.3.0",
    "scipy>=1.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
